# hadoop-common

./: README  README.txt  RESULTS.txt  TODO.txt  pom.xml
hadoop-assemblies/: pom.xml
hadoop-client/: pom.xml
hadoop-common-project/: pom.xml
hadoop-common-project/hadoop-annotations/: pom.xml
hadoop-common-project/hadoop-auth/: pom.xml
hadoop-common-project/hadoop-auth-examples/: pom.xml
hadoop-common-project/hadoop-common/: pom.xml
hadoop-common-project/hadoop-common/src/main/java/org/apache/hadoop/fs/: MagpieNetworkFileSystem.java  RawLocalFileSystem.java
hadoop-common-project/hadoop-common/src/main/java/org/apache/hadoop/fs/local/: RawLocalFs.java
hadoop-common-project/hadoop-common/src/main/java/org/apache/hadoop/fs/magpienetworkfs/: MagpieNetworkFs.java
hadoop-common-project/hadoop-common/src/main/java/org/apache/hadoop/ipc/: Client.java  Server.java
hadoop-dist/: pom.xml
hadoop-hdfs-project/: pom.xml
hadoop-hdfs-project/hadoop-hdfs/: pom.xml
hadoop-hdfs-project/hadoop-hdfs-httpfs/: pom.xml
hadoop-hdfs-project/hadoop-hdfs/src/contrib/bkjournal/: pom.xml
hadoop-mapreduce-project/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-app/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-common/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/src/main/java/org/apache/hadoop/mapred/: MergeSorter.java  Merger.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/src/main/java/org/apache/hadoop/mapreduce/: MRJobConfig.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/src/main/java/org/apache/hadoop/mapreduce/task/reduce/: Fetcher.java  MapOutput.java  MergeManager.java  OnDiskData.java  ShuffleHeader.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-hs/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-hs-plugins/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-jobclient/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-shuffle/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-shuffle/src/main/java/org/apache/hadoop/mapred/: ShuffleHandler.java
hadoop-mapreduce-project/hadoop-mapreduce-examples/: pom.xml
hadoop-minicluster/: pom.xml
hadoop-project/: pom.xml
hadoop-project-dist/: pom.xml
hadoop-tools/: pom.xml
hadoop-tools/hadoop-archives/: pom.xml
hadoop-tools/hadoop-datajoin/: pom.xml
hadoop-tools/hadoop-distcp/: pom.xml
hadoop-tools/hadoop-extras/: pom.xml
hadoop-tools/hadoop-gridmix/: pom.xml
hadoop-tools/hadoop-pipes/: pom.xml
hadoop-tools/hadoop-rumen/: pom.xml
hadoop-tools/hadoop-streaming/: pom.xml
hadoop-tools/hadoop-tools-dist/: pom.xml
hadoop-yarn-project/: pom.xml
hadoop-yarn-project/hadoop-yarn/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-api/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-applications/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-applications/hadoop-yarn-applications-distributedshell/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-applications/hadoop-yarn-applications-unmanaged-am-launcher/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-client/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-common/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-nodemanager/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-resourcemanager/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-tests/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-web-proxy/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-site/: pom.xml
libuda/: UdaBridge.cc
libuda/CommUtils/: C2JNexus.cc  IOUtility.cc
libuda/DataNet/: RDMAClient.cc  RDMAComm.cc  RDMAServer.cc
libuda/MOFServer/: MOFServlet.cc
libuda/Merger/: MergeManager.cc  StreamRW.cc  reducer.cc
mlx-3.x/: Makefile
mlx-3.x/com/mellanox/hadoop/mapred/: UdaBridge.java  UdaPlugin.java  UdaShuffleConsumerPlugin.java  UdaShuffleHandler.java
mungejni/: ChangeLog  META  Makefile.am  Makefile.in  README  aclocal.m4  configure.ac  mungejni.spec.in
mungejni/MungeTest/: MungeTest.java
mungejni/gov/llnl/lc/chaos/: Munge.java  MungeDecodeData.java  MungeException.java  MungeExceptionBadArg.java  MungeExceptionBadCipher.java  MungeExceptionBadCred.java  MungeExceptionBadLength.java  MungeExceptionBadMac.java  MungeExceptionBadRealm.java  MungeExceptionBadVersion.java  MungeExceptionBadZip.java  MungeExceptionCredExpired.java  MungeExceptionCredInvalid.java  MungeExceptionCredReplayed.java  MungeExceptionCredRewound.java  MungeExceptionCredUnauthorized.java  MungeExceptionInternalError.java  MungeExceptionNoMemory.java  MungeExceptionOverflow.java  MungeExceptionSnafu.java  MungeExceptionSocket.java  MungeExceptionTimeout.java  MungeSave.java
mungejni/src/: Mungejni.c  Mungejni.h
(+1 files in other folders)
